--- a/Flower.html
+++ b/Flower.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Flower </title>
+  <title> Happy Valentine's Day </title>
   <link rel="icon" href="image/icon-removebg-preview.png">
   <link rel="stylesheet" href="./style.css">
   <script src="script.js"></script>
